[gd_scene load_steps=9 format=3 uid="uid://bhni05dp5lq1p"]

[ext_resource type="PackedScene" uid="uid://d0q4vk4tft80w" path="res://entities/player/runner_player/runner_player.tscn" id="1_g8mui"]
[ext_resource type="Script" uid="uid://dkmlbwg8xhf27" path="res://stages/runner_world/runner_world.gd" id="1_hcme1"]
[ext_resource type="PackedScene" uid="uid://b40723gk7tyw5" path="res://entities/spawner/barrel_spawner/barrel_spawner.tscn" id="6_yjwnw"]
[ext_resource type="PackedScene" uid="uid://cm8l43emuusdn" path="res://utilities/box/hurt_box.tscn" id="12_sqx3f"]
[ext_resource type="Theme" uid="uid://c3n53ayg8a6g" path="res://assets/themes/themes.tres" id="14_bfn6u"]
[ext_resource type="FontFile" uid="uid://c6wydwtikx8v6" path="res://assets/fonts/Round9x13.ttf" id="15_ynb32"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh0k4"]
size = Vector2(916.25, 92)

[sub_resource type="CircleShape2D" id="CircleShape2D_85meu"]
radius = 27.0185

[node name="RunnerWorld" type="Node2D"]
script = ExtResource("1_hcme1")
metadata/_edit_vertical_guides_ = [640.0]
metadata/_edit_horizontal_guides_ = [360.0]

[node name="Wall" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(1095.88, 280)
shape = SubResource("RectangleShape2D_oh0k4")

[node name="RunnerPlayer" parent="." instance=ExtResource("1_g8mui")]
position = Vector2(801, 206)

[node name="BarrelSpawner" parent="." instance=ExtResource("6_yjwnw")]

[node name="BarrelGroup" type="Node2D" parent="." groups=["barrels"]]

[node name="JumpButton" type="Button" parent="."]
offset_left = 905.0
offset_top = 268.0
offset_right = 1055.0
offset_bottom = 328.0
theme = ExtResource("14_bfn6u")
theme_override_fonts/font = ExtResource("15_ynb32")
text = "JUMP"

[node name="ButtonDisableTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("12_sqx3f")]
position = Vector2(621, 205)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_85meu")
